--- a/templates/shop/category-details.html
+++ b/templates/shop/category-details.html
@@ -137,7 +137,7 @@
                         <div class="tp-shop-widget-product-item d-flex align-items-center">
                            <div class="tp-shop-widget-product-thumb">
                               <a href="product-details.html">
-                                 <img src="{% static 'assets/img/product/shop/sm/shop-sm-1.jpg' %}" alt="">
+                                 <img src="assets/img/product/shop/sm/shop-sm-1.jpg" alt="">
                               </a>
                            </div>
                            <div class="tp-shop-widget-product-content">
@@ -184,7 +184,7 @@
                         <div class="tp-shop-widget-product-item d-flex align-items-center">
                            <div class="tp-shop-widget-product-thumb">
                               <a href="product-details.html">
-                                 <img src="{% static 'assets/img/product/shop/sm/shop-sm-2.jpg' %}" alt="">
+                                 <img src="assets/img/product/shop/sm/shop-sm-2.jpg" alt="">
                               </a>
                            </div>
                            <div class="tp-shop-widget-product-content">
@@ -231,7 +231,7 @@
                         <div class="tp-shop-widget-product-item d-flex align-items-center">
                            <div class="tp-shop-widget-product-thumb">
                               <a href="product-details.html">
-                                 <img src="{% static 'assets/img/product/shop/sm/shop-sm-3.jpg' %}" alt="">
+                                 <img src="assets/img/product/shop/sm/shop-sm-3.jpg" alt="">
                               </a>
                            </div>
                            <div class="tp-shop-widget-product-content">
@@ -278,7 +278,7 @@
                         <div class="tp-shop-widget-product-item d-flex align-items-center">
                            <div class="tp-shop-widget-product-thumb">
                               <a href="product-details.html">
-                                 <img src="{% static 'assets/img/product/shop/sm/shop-sm-4.jpg' %}" alt="">
+                                 <img src="assets/img/product/shop/sm/shop-sm-4.jpg" alt="">
                               </a>
                            </div>
                            <div class="tp-shop-widget-product-content">
@@ -333,42 +333,42 @@
                      <div class="tp-shop-widget-brand-list d-flex align-items-center justify-content-between flex-wrap">
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_01.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_01.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_02.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_02.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_03.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_03.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_04.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_04.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_05.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_05.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_06.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_06.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_07.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_07.png" alt="">
                            </a>
                         </div>
                         <div class="tp-shop-widget-brand-item">
                            <a href="shop-no-sidebar.html#">
-                              <img src="{% static 'assets/img/product/shop/brand/logo_08.png' %}" alt="">
+                              <img src="assets/img/product/shop/brand/logo_08.png" alt="">
                            </a>
                         </div>
                      </div>
