--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -12,10 +12,10 @@
                           <circle stroke="red" cx="190" cy="190" r="180" stroke-width="6" stroke-linecap="round"></circle> 
                       </svg>
                     </div>
-                    <img src="{{settings.logo.url}}" style="width: 150px; height: 150px; border-radius: 50%;" style="width: 150px; height: 150px; border-radius: 50%;" alt="">
+                    <img src="{{settings.logo.url}}" style="width: 150px; height: 150px; border-radius: 50%;" alt="">
                  </div>
                  <h3 class="tp-preloader-title">Barmak</h3>
-                 <p class="tp-preloader-subtitle">Loading</p>
+                 <p class="tp-preloader-subtitle">Загрузка</p>
               </div>
            </div>
         </div>  
@@ -47,7 +47,7 @@
               <div class="offcanvas__top mb-70 d-flex justify-content-between align-items-center">
                  <div class="offcanvas__logo logo">
                     <a href="{% url 'index' %}">
-                       <img src="{% static 'assets/img/logo/logo.svg' %}" alt="logo">
+                       <img src="{{settings.logo.url}}" style="width: 20%;" alt="logo">
                     </a>
                  </div>
               </div>
@@ -179,7 +179,7 @@
                                 {% if user.is_authenticated %}
                                 <ul>
                                    <li>
-                                      <a href="#">Профиль</a>
+                                      <a href="{% url 'profile' user.username %}">Профиль</a>
                                    </li>
                                    <li>
                                       <a href="{% url 'logout' %}">Выйти</a>
@@ -211,7 +211,7 @@
                        <div class="col-xl-2 col-lg-5 col-md-5 col-sm-4 col-6">
                           <div class="logo">
                              <a href="{% url 'index' %}">
-                                <img src="{{settings.logo.url}}" style="width: 100px; height: 100px; border-radius: 50%;" alt="logo">
+                                <img src="{{settings.logo.url}}" style="width: 40%; height: 40%; border-radius: 50%;" alt="logo">
                              </a>
                           </div>
                        </div>
