--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -22,8 +22,8 @@
                      <div class="profile__tab mr-40">
                         <nav>
                            <div class="nav nav-tabs tp-tab-menu flex-column" id="profile-tab" role="tablist">
-                              <button class="nav-link active" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><span><i class="fa-regular fa-user-pen"></i></span>Profile</button>
-                              <button class="nav-link" id="nav-information-tab" data-bs-toggle="tab" data-bs-target="#nav-information" type="button" role="tab" aria-controls="nav-information" aria-selected="false"><span><i class="fa-regular fa-circle-info"></i></span> Information</button>
+                              <button class="nav-link active" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><span><i class="fa-regular fa-user-pen"></i></span>Профиль</button>
+                              <button class="nav-link" id="nav-information-tab" data-bs-toggle="tab" data-bs-target="#nav-information" type="button" role="tab" aria-controls="nav-information" aria-selected="false"><span><i class="fa-regular fa-circle-info"></i></span> Информация обо мне</button>
                               <button class="nav-link" id="nav-address-tab" data-bs-toggle="tab" data-bs-target="#nav-address" type="button" role="tab" aria-controls="nav-address" aria-selected="false"><span><i class="fa-light fa-location-dot"></i></span> Address </button>
                               <button class="nav-link" id="nav-order-tab" data-bs-toggle="tab" data-bs-target="#nav-order" type="button" role="tab" aria-controls="nav-order" aria-selected="false"><span><i class="fa-light fa-clipboard-list-check"></i></span> My Orders </button>
                               <button class="nav-link" id="nav-notification-tab" data-bs-toggle="tab" data-bs-target="#nav-notification" type="button" role="tab" aria-controls="nav-notification" aria-selected="false"><span><i class="fa-regular fa-bell"></i></span> Notification</button>
@@ -42,22 +42,29 @@
                                     <div class="row align-items-center">
                                        <div class="col-md-6">
                                           <div class="profile__main-inner d-flex flex-wrap align-items-center">
+                                             <form method="post" enctype="multipart/form-data">
+                                                {% csrf_token %}
                                              <div class="profile__main-thumb">
-                                                <img src="{ % static 'assets/img/users/user-10.jpg" alt="">
+                                                {% if user.profile_image %}
+                                                <img src="{{user.profile_image.url}}" alt="">
+                                                {% else %}
+                                                <label for="profile-thumb-input"><i class="fa-light fa-camera"></i><img src="{ % static 'assets/img/users/images.png' %}" alt=""></label>
+                                                {% endif %}
                                                 <div class="profile__main-thumb-edit">
-                                                   <input id="profile-thumb-input" class="profile-img-popup" type="file">
-                                                   <label for="profile-thumb-input"><i class="fa-light fa-camera"></i></label>
+                                                   <input id="profile-thumb-input" class="profile-img-popup" type="file" name="profile_image">
+                                                   <button class="update_profile_image" type="submit" name="update_profile_image">Обновите фото профиля</button>
                                                 </div>
                                              </div>
+                                             </form>
                                              <div class="profile__main-content">
-                                                <h4 class="profile__main-title">Welcome Mr. Admin!</h4>
-                                                <p>You have <span>08</span> notifications</p>
+                                                <h4 class="profile__main-title">{{user.username}}</h4>
+                                                <p>биография</p>
                                              </div>
                                           </div>
                                        </div>
                                        <div class="col-md-6">
                                           <div class="profile__main-logout text-sm-end">
-                                             <a href="login.html" class="tp-logout-btn">Logout</a>
+                                             <a href="{% url 'logout' %}" class="tp-logout-btn">Выйти</a>
                                           </div>
                                        </div>
                                     </div>
