--- a/templates/shop/category-details.html
+++ b/templates/shop/category-details.html
@@ -9,13 +9,13 @@
             <div class="tp-filter-offcanvas-close">
                <button type="button" class="tp-filter-offcanvas-close-btn filter-close-btn">
                   <i class="fa-solid fa-xmark"></i>
-                  Close
+                  Закрыть
                </button>
             </div>
             <div class="tp-shop-sidebar">
                <!-- filter -->
                <div class="tp-shop-widget mb-35">
-                  <h3 class="tp-shop-widget-title no-border">Price Filter</h3>
+                  <h3 class="tp-shop-widget-title no-border">Фильтр</h3>
 
                   <div class="tp-shop-widget-content">
                      <div class="tp-shop-widget-filter">
@@ -24,7 +24,7 @@
                            <span class="input-range">
                               <input type="text" id="amount-offcanvas" readonly>
                            </span>
-                           <button class="tp-shop-widget-filter-btn" type="button">Filter</button>
+                           <button class="tp-shop-widget-filter-btn" type="button">Фильтр</button>
                         </div>
                      </div>
                   </div>
