--- a/templates/shop/product-details.html
+++ b/templates/shop/product-details.html
@@ -90,7 +90,7 @@
                                     <span><i class="fa-solid fa-star"></i></span>
                                  </div>
                                  <div class="tp-product-details-reviews">
-                                    <span>(36 Reviews)</span>
+                                    <span>(36 Отзывы)</span>
                                  </div>
                               </div>
                            </div>
