--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -6486,7 +6486,10 @@ body .ui-tooltip {
 .tp-header-info-item a {
   font-size: 15px;
   color: rgba(1, 15, 28, 0.8);
+  padding: 0 10px;
 }
+
+
 .tp-header-info-item a span {
   color: var(--tp-theme-secondary);
   margin-right: 5px;
@@ -14682,6 +14685,9 @@ div.tp-author-info-avater img {
   right: 20px;
   z-index: 1;
   text-align: center;
+  background: #ffffffbf;
+  padding: 20px;
+  border-radius: 10px;
 }
 .tp-category-main-item {
   font-weight: 500;
