--- a/templates/shop/all_products.html
+++ b/templates/shop/all_products.html
@@ -25,7 +25,7 @@
                                 <span class="input-range">
                                     <input name="min_price" type="text" id="amount-offcanvas" readonly>
                                 </span>
-                                <button class="tp-shop-widget-filter-btn" type="submit">Filter</button>
+                                <button class="tp-shop-widget-filter-btn" type="submit">Фильтр</button>
                             </div>
                         </form>
                     </div>
@@ -93,7 +93,7 @@
                      <div class="breadcrumb__content p-relative z-index-1">
                         <h3 class="breadcrumb__title">Все продукты</h3>
                         <div class="breadcrumb__list">
-                           <span><a href="shop-no-sidebar.html#">Home</a></span>
+                           <span><a href="/">Главная</a></span>
                            <span>Все продукты</span>
                         </div>
                      </div>
