--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -313,7 +313,7 @@
                                                 <span><i class="fa-solid fa-star"></i></span>
                                              </div>
                                              <div class="tp-product-rating-text">
-                                                <span>(7 Review)</span>
+                                                <span>{{product.review_product.all.count}} отзыва</span>
                                              </div>
                                           </div>
                                           <div class="tp-product-price-wrapper">
@@ -413,7 +413,7 @@
                                           <span><i class="fa-solid fa-star"></i></span>
                                        </div>
                                        <div class="tp-product-rating-text">
-                                          <span>(15 Review)</span>
+                                          <span>{{product.review_product.all.count}} отзыва</span>
                                        </div>
                                     </div>
                                     <div class="tp-product-price-wrapper">
@@ -509,7 +509,7 @@
                                           <span><i class="fa-solid fa-star"></i></span>
                                        </div>
                                        <div class="tp-product-rating-text">
-                                          <span>(2 Review)</span>
+                                          <span>{{product.review_product.all.count}} отзыва</span>
                                        </div>
                                     </div>
                                     <div class="tp-product-price-wrapper">
@@ -567,7 +567,7 @@
                                        <span><i class="fa-solid fa-star"></i></span>
                                     </div>
                                     <div class="tp-product-rating-text">
-                                       <span>(4 Review)</span>
+                                       <span>{{product.review_product.all.count}} отзыва</span>
                                     </div>
                                  </div>
                                  <div class="tp-product-price-wrapper">
@@ -612,7 +612,7 @@
                                        <span><i class="fa-solid fa-star"></i></span>
                                     </div>
                                     <div class="tp-product-rating-text">
-                                       <span>(4 Review)</span>
+                                       <span>{{product.review_product.all.count}} отзыва</span>
                                     </div>
                                  </div>
                                  <div class="tp-product-price-wrapper">
@@ -657,7 +657,7 @@
                                        <span><i class="fa-solid fa-star"></i></span>
                                     </div>
                                     <div class="tp-product-rating-text">
-                                       <span>(4 Review)</span>
+                                       <span>{{product.review_product.all.count}} отзыва</span>
                                     </div>
                                  </div>
                                  <div class="tp-product-price-wrapper">
@@ -851,7 +851,7 @@
                                  <span><i class="fa-solid fa-star"></i></span>
                               </div>
                               <div class="tp-product-details-reviews">
-                                 <span>(36 Reviews)</span>
+                                 <span>{{product.review_product.all.count}} отзыва</span>
                               </div>
                            </div>
                         </div>
