--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -272,7 +272,7 @@
                                  {% if product.popular %}
                                  <div class="col-xl-3 col-lg-3 col-sm-6">
                                     <div class="tp-product-item p-relative transition-3 mb-25">
-                                       <div class="tp-product-thumb p-relative fix m-img">
+                                       <div class="tp-product-thumb p-relative fix m-img" style="width: 100%; height: 250px;">
                                           <a href="{% url 'product_detail' product.id %}">
                                              <img src="{{product.image.url}}" alt="product-electronic">
                                           </a>
@@ -375,7 +375,7 @@
                               {% for product in popular_products %}
                               {% if product.product_day %}
                               <div class="tp-product-offer-item tp-product-item transition-3 swiper-slide">
-                                 <div class="tp-product-thumb p-relative fix m-img">
+                                 <div class="tp-product-thumb p-relative fix m-img" style="width: 100%; height: 250px;">
                                     <a href="{% url 'product_detail' product.id %}">
                                        <img src="{{product.image.url}}" alt="product-electronic">
                                     </a>
@@ -489,7 +489,7 @@
                               {% for product in popular_products %}
                               {% if product.new %}
                               <div class="tp-product-item transition-3 mb-25 swiper-slide ">
-                                 <div class="tp-product-thumb p-relative fix m-img">
+                                 <div class="tp-product-thumb p-relative fix m-img" style="width: 100%; height: 250px;">
                                     <a href="{% url 'product_detail' product.id %}">
                                        <img src="{{product.image.url}}" alt="product-electronic">
                                     </a>
