added telegram login

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -49,7 +49,7 @@
                                  </a>
                               </div>
                               <div class="tp-login-option-item">
-                                 <a href="login.html#">
+                                 <a href="{% provider_login_url 'telegram' %}">
                                     <img src="{% static 'assets/img/icon/login/facebook.svg' %}" alt="">
                                  </a>
                               </div>
