--- a/templates/include/homepage.html
+++ b/templates/include/homepage.html
@@ -1,49 +1,187 @@
 {% load static %}
 <!doctype html>
 <html class="no-js" lang="zxx">
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>{{ title_page }}</title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Place favicon.ico in the root directory -->
-      <link rel="shortcut icon" type="image/x-icon" href="{{settings.logo.url}}">
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
+   <title>{{ title_page }}</title>
+   <meta name="description" content="">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- CSS here -->
-      <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/animate.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/swiper-bundle.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/slick.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/magnific-popup.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/flaticon_shofy.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/spacing.css' %}">
-      <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
-   </head>
-   <body>
+   <!-- Place favicon.ico in the root directory -->
+   <link rel="shortcut icon" type="image/x-icon" href="{{settings.logo.url}}">
 
-    {% block content %}
+   <!-- CSS here -->
+   <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/animate.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/swiper-bundle.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/slick.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/magnific-popup.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/flaticon_shofy.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/spacing.css' %}">
+   <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
+</head>
 
-    {% endblock %}
+<body>
 
-      <!-- JS here -->
-      <script src="{% static 'assets/js/vendor/jquery.js' %}"></script>
-      <script src="{% static 'assets/js/vendor/waypoints.js' %}"></script>
-      <script src="{% static 'assets/js/bootstrap-bundle.js' %}"></script>
-      <script src="{% static 'assets/js/meanmenu.js' %}"></script>
-      <script src="{% static 'assets/js/swiper-bundle.js' %}"></script>
-      <script src="{% static 'assets/js/slick.js' %}"></script>
-      <script src="{% static 'assets/js/range-slider.js' %}"></script>
-      <script src="{% static 'assets/js/magnific-popup.js' %}"></script>
-      <script src="{% static 'assets/js/nice-select.js' %}"></script>
-      <script src="{% static 'assets/js/purecounter.js' %}"></script>
-      <script src="{% static 'assets/js/countdown.js' %}"></script>
-      <script src="{% static 'assets/js/wow.js' %}"></script>
-      <script src="{% static 'assets/js/isotope-pkgd.js' %}"></script>
-      <script src="{% static 'assets/js/imagesloaded-pkgd.js' %}"></script>
-      <script src="{% static 'assets/js/ajax-form.js' %}"></script>
-      <script src="{% static 'assets/js/main.js' %}"></script>
-   </body>
+   {% block content %}
+
+   {% endblock %}
+
+   <!-- JS here -->
+   <script src="{% static 'assets/js/vendor/jquery.js' %}"></script>
+   <script src="{% static 'assets/js/vendor/waypoints.js' %}"></script>
+   <script src="{% static 'assets/js/bootstrap-bundle.js' %}"></script>
+   <script src="{% static 'assets/js/meanmenu.js' %}"></script>
+   <script src="{% static 'assets/js/swiper-bundle.js' %}"></script>
+   <script src="{% static 'assets/js/slick.js' %}"></script>
+   <script src="{% static 'assets/js/range-slider.js' %}"></script>
+   <script src="{% static 'assets/js/magnific-popup.js' %}"></script>
+   <script src="{% static 'assets/js/nice-select.js' %}"></script>
+   <script src="{% static 'assets/js/purecounter.js' %}"></script>
+   <script src="{% static 'assets/js/countdown.js' %}"></script>
+   <script src="{% static 'assets/js/wow.js' %}"></script>
+   <script src="{% static 'assets/js/isotope-pkgd.js' %}"></script>
+   <script src="{% static 'assets/js/imagesloaded-pkgd.js' %}"></script>
+   <script src="{% static 'assets/js/ajax-form.js' %}"></script>
+   <script src="{% static 'assets/js/main.js' %}"></script>
+   <script>
+
+      //for search
+      // Отключаем стандартное поведение формы
+      $('form.liveFormSearch').on('submit', function (e) {
+         e.preventDefault();
+
+         var query = $('input.liveSearchBox').val();
+         // Проверяем, что в поле ввода есть текст
+         if (query.length > 2) {
+            $.ajax({
+               url: '{% url "search" %}', // Путь к вашему view для поиска
+               data: { 'q': query },
+               dataType: 'json',
+               success: function (data) {
+                  $('ul.liveSearchResults').empty().show();
+                  if (data.length === 0) {
+                     // Если результатов нет, отображаем сообщение
+                     $('ul.liveSearchResults').append('<li>Результатов нет</li>');
+                  } else {// Очищаем и показываем список результатов
+                     data.forEach(function (item) {
+                        $('ul.liveSearchResults').append('<li><img src="/media/'+ item.image +'" alt=""><a href="/product_detail/' + item.id + '">' + item.title + '</a></li>');
+                     });
+                  }
+                  $('ul.liveSearchResults').addClass('visible');
+               },
+               error: function () {
+                  $('ul.liveSearchResults').empty().hide(); // Скрываем список, если произошла ошибка
+               }
+            });
+         } else {
+            $('ul.liveSearchResults').empty().hide(); // Скрываем список, если поле ввода очищено
+         }
+      });
+
+
+      $('input.liveSearchBox').keyup(function () {
+         var query = $(this).val();
+         if (query.length > 2) {
+            $.ajax({
+               url: '{% url "search" %}', // Путь к вашему view для поиска
+               data: { 'q': query },
+               dataType: 'json',
+               success: function (data) {
+                  $('ul.liveSearchResults').empty().show(); // Очищаем и показываем список результатов
+                  if (data.length === 0) {
+                     // Если результатов нет, отображаем сообщение
+                     $('ul.liveSearchResults').append('<li>Результатов нет</li>');
+                  } else {// Очищаем и показываем список результатов
+                     data.forEach(function (item) {
+                        $('ul.liveSearchResults').append('<li><img src="/media/'+ item.image +'" alt=""><a href="/product_detail/' + item.id + '">' + item.title + '</a></li>');
+                     });
+                  }
+                  $('ul.liveSearchResults').addClass('visible');
+               },
+               error: function () {
+                  $('ul.liveSearchResults').empty().hide(); // Скрываем список, если произошла ошибка
+               }
+            });
+         } else {
+            $('ul.liveSearchResults').empty().hide(); // Скрываем список, если поле ввода очищено
+         }
+      });
+
+
+      //for search mobile
+      // Отключаем стандартное поведение формы
+      $('form.liveFormSearchMobile').on('submit', function (e) {
+         e.preventDefault();
+
+         var query = $('input.liveSearchBoxMobile').val();
+         // Проверяем, что в поле ввода есть текст
+         if (query.length > 2) {
+            $.ajax({
+               url: '{% url "search" %}', // Путь к вашему view для поиска
+               data: { 'q': query },
+               dataType: 'json',
+               success: function (data) {
+                  $('ul.liveSearchResults').empty().show();
+                  if (data.length === 0) {
+                     // Если результатов нет, отображаем сообщение
+                     $('ul.liveSearchResults').append('<li>Результатов нет</li>');
+                  } else {// Очищаем и показываем список результатов
+                     data.forEach(function (item) {
+                        $('ul.liveSearchResults').append('<li><img src="/media/'+ item.image +'" alt=""><a href="/product_detail/' + item.id + '">' + item.title + '</a></li>');
+                     });
+                  }
+                  $('ul.liveSearchResults').addClass('visible');
+               },
+               error: function () {
+                  $('ul.liveSearchResults').empty().hide(); // Скрываем список, если произошла ошибка
+               }
+            });
+         } else {
+            $('ul.liveSearchResults').empty().hide(); // Скрываем список, если поле ввода очищено
+         }
+      });
+
+
+      $('input.liveSearchBoxMobile').keyup(function () {
+         var query = $(this).val();
+         if (query.length > 2) {
+            $.ajax({
+               url: '{% url "search" %}', // Путь к вашему view для поиска
+               data: { 'q': query },
+               dataType: 'json',
+               success: function (data) {
+                  $('ul.liveSearchResults').empty().show(); // Очищаем и показываем список результатов
+                  if (data.length === 0) {
+                     // Если результатов нет, отображаем сообщение
+                     $('ul.liveSearchResults').append('<li>Результатов нет</li>');
+                  } else {// Очищаем и показываем список результатов
+                     data.forEach(function (item) {
+                        $('ul.liveSearchResults').append('<li><img src="/media/'+ item.image +'" alt=""><a href="/product_detail/' + item.id + '">' + item.title + '</a></li>');
+                     });
+                  }
+                  $('ul.liveSearchResults').addClass('visible');
+               },
+               error: function () {
+                  $('ul.liveSearchResults').empty().hide(); // Скрываем список, если произошла ошибка
+               }
+            });
+         } else {
+            $('ul.liveSearchResults').empty().hide(); // Скрываем список, если поле ввода очищено
+         }
+      });
+
+
+      // Дополнительно, скрывать список при клике вне его
+      $(document).click(function (e) {
+         if (!$(e.target).closest('input.liveSearchBox').length) {
+            $('ul.liveSearchResults').hide();
+         }
+      });
+   </script>
+</body>
+
 </html>
