--- a/templates/shop/all_products.html
+++ b/templates/shop/all_products.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 {% include 'include/header.html' %}   
-
+   <!-- Test -->
     <!-- filter offcanvas area start -->
     <div class="tp-filter-offcanvas-area tp-filter-offcanvas-right">
         <div class="tp-filter-offcanvas-wrapper">
